src/com/dameng/xdb/parser/XDBParser.java
// Generated from XDB.g4 by ANTLR 4.7.1

	package com.dameng.xdb.parser;
	
	import java.util.ArrayList;
	import java.util.Arrays;
	import java.util.List;
	import java.util.Map;
	import java.util.HashMap;
	
	import com.dameng.xdb.se.model.GObject;
	import com.dameng.xdb.se.model.Link;
	import com.dameng.xdb.se.model.Node;
	import com.dameng.xdb.se.model.PropValue;
	import com.dameng.xdb.stmt.SEExit;
	import com.dameng.xdb.stmt.SELogin;
	import com.dameng.xdb.stmt.SELogout;
	import com.dameng.xdb.stmt.SEPut;
	import com.dameng.xdb.stmt.SEGet;
	import com.dameng.xdb.stmt.SERemove;
	import com.dameng.xdb.stmt.SESet;
	import com.dameng.xdb.stmt.SEShow;
	import com.dameng.xdb.stmt.SEHelp;
	import com.dameng.xdb.stmt.Statement;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XDBParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		KW_HELP=10, KW_LOGIN=11, KW_LOGOUT=12, KW_EXIT=13, KW_PUT=14, KW_GET=15, 
		KW_SET=16, KW_REMOVE=17, KW_SHOW=18, KW_NODE=19, KW_LINK=20, KW_TOP=21, 
		IP=22, NUMBERIC=23, DECIMAL=24, STRING=25, BOOLEAN=26, IDENTIFIER=27, 
		LINE_COMMENT=28, COMMENT=29, WS=30, DIGIT=31, LETTER=32, A=33, B=34, C=35, 
		D=36, E=37, F=38, G=39, H=40, I=41, J=42, K=43, L=44, M=45, N=46, O=47, 
		P=48, Q=49, R=50, S=51, T=52, U=53, V=54, W=55, X=56, Y=57, Z=58, OTHER=59;
	public static final int
		RULE_xdb = 0, RULE_stmt = 1, RULE_se_stmt = 2, RULE_categorys = 3, RULE_category = 4, 
		RULE_properties = 5, RULE_property = 6, RULE_property_key = 7, RULE_property_val = 8, 
		RULE_obj_ids = 9, RULE_obj_id = 10, RULE_host = 11, RULE_port = 12, RULE_identifier = 13, 
		RULE_end = 14, RULE_lt_numberic = 15, RULE_lt_decimal = 16, RULE_lt_string = 17, 
		RULE_lt_boolean = 18;
	public static final String[] ruleNames = {
		"xdb", "stmt", "se_stmt", "categorys", "category", "properties", "property", 
		"property_key", "property_val", "obj_ids", "obj_id", "host", "port", "identifier", 
		"end", "lt_numberic", "lt_decimal", "lt_string", "lt_boolean"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "':'", "'@'", "'/'", "'('", "')'", "'{'", "'}'", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "KW_HELP", 
		"KW_LOGIN", "KW_LOGOUT", "KW_EXIT", "KW_PUT", "KW_GET", "KW_SET", "KW_REMOVE", 
		"KW_SHOW", "KW_NODE", "KW_LINK", "KW_TOP", "IP", "NUMBERIC", "DECIMAL", 
		"STRING", "BOOLEAN", "IDENTIFIER", "LINE_COMMENT", "COMMENT", "WS", "DIGIT", 
		"LETTER", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", 
		"M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", 
		"OTHER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XDB.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		public List<Statement> stmtList = new ArrayList<Statement>();

	public XDBParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class XdbContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public XdbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xdb; }
	}

	public final XdbContext xdb() throws RecognitionException {
		XdbContext _localctx = new XdbContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xdb);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				stmt();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_HELP) | (1L << KW_LOGIN) | (1L << KW_LOGOUT) | (1L << KW_EXIT) | (1L << KW_PUT) | (1L << KW_GET) | (1L << KW_SET) | (1L << KW_REMOVE) | (1L << KW_SHOW))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Se_stmtContext se_stmt;
		public Se_stmtContext se_stmt() {
			return getRuleContext(Se_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			((StmtContext)_localctx).se_stmt = se_stmt();

					stmtList.add(((StmtContext)_localctx).se_stmt.ret);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Se_stmtContext extends ParserRuleContext {
		public Statement ret;
		public HostContext host;
		public PortContext port;
		public IdentifierContext user;
		public IdentifierContext password;
		public CategorysContext categorys;
		public PropertiesContext properties;
		public Obj_idContext fnode;
		public Obj_idContext tnode;
		public Obj_idsContext obj_ids;
		public Obj_idContext obj_id;
		public Lt_numbericContext lt_numberic;
		public TerminalNode KW_LOGIN() { return getToken(XDBParser.KW_LOGIN, 0); }
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public EndContext end() {
			return getRuleContext(EndContext.class,0);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode KW_LOGOUT() { return getToken(XDBParser.KW_LOGOUT, 0); }
		public TerminalNode KW_EXIT() { return getToken(XDBParser.KW_EXIT, 0); }
		public TerminalNode KW_HELP() { return getToken(XDBParser.KW_HELP, 0); }
		public TerminalNode KW_PUT() { return getToken(XDBParser.KW_PUT, 0); }
		public TerminalNode KW_NODE() { return getToken(XDBParser.KW_NODE, 0); }
		public CategorysContext categorys() {
			return getRuleContext(CategorysContext.class,0);
		}
		public PropertiesContext properties() {
			return getRuleContext(PropertiesContext.class,0);
		}
		public TerminalNode KW_LINK() { return getToken(XDBParser.KW_LINK, 0); }
		public List<Obj_idContext> obj_id() {
			return getRuleContexts(Obj_idContext.class);
		}
		public Obj_idContext obj_id(int i) {
			return getRuleContext(Obj_idContext.class,i);
		}
		public TerminalNode KW_GET() { return getToken(XDBParser.KW_GET, 0); }
		public Obj_idsContext obj_ids() {
			return getRuleContext(Obj_idsContext.class,0);
		}
		public TerminalNode KW_SET() { return getToken(XDBParser.KW_SET, 0); }
		public TerminalNode KW_REMOVE() { return getToken(XDBParser.KW_REMOVE, 0); }
		public TerminalNode KW_SHOW() { return getToken(XDBParser.KW_SHOW, 0); }
		public TerminalNode KW_TOP() { return getToken(XDBParser.KW_TOP, 0); }
		public Lt_numbericContext lt_numberic() {
			return getRuleContext(Lt_numbericContext.class,0);
		}
		public Se_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_se_stmt; }
	}

	public final Se_stmtContext se_stmt() throws RecognitionException {
		Se_stmtContext _localctx = new Se_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_se_stmt);
		try {
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(KW_LOGIN);
				setState(47);
				((Se_stmtContext)_localctx).host = host();
				setState(48);
				match(T__0);
				setState(49);
				((Se_stmtContext)_localctx).port = port();
				setState(50);
				end();

						((Se_stmtContext)_localctx).ret =  new SELogin(((Se_stmtContext)_localctx).host.ret, ((Se_stmtContext)_localctx).port.ret);
					
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(KW_LOGIN);
				setState(54);
				((Se_stmtContext)_localctx).host = host();
				setState(55);
				match(T__0);
				setState(56);
				((Se_stmtContext)_localctx).port = port();
				setState(57);
				match(T__1);
				setState(58);
				((Se_stmtContext)_localctx).user = identifier();
				setState(59);
				match(T__2);
				setState(60);
				((Se_stmtContext)_localctx).password = identifier();
				setState(61);
				end();

						((Se_stmtContext)_localctx).ret =  new SELogin(((Se_stmtContext)_localctx).host.ret, ((Se_stmtContext)_localctx).port.ret, ((Se_stmtContext)_localctx).user.ret, ((Se_stmtContext)_localctx).password.ret);
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(KW_LOGOUT);

						((Se_stmtContext)_localctx).ret =  new SELogout();
					
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(66);
				match(KW_EXIT);

						((Se_stmtContext)_localctx).ret =  new SEExit();
					
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				match(KW_HELP);

						((Se_stmtContext)_localctx).ret =  new SEHelp();
					
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(70);
				match(KW_PUT);
				setState(71);
				match(KW_NODE);
				setState(72);
				match(T__3);
				setState(73);
				((Se_stmtContext)_localctx).categorys = categorys();
				setState(74);
				match(T__4);
				setState(75);
				match(T__5);
				setState(76);
				((Se_stmtContext)_localctx).properties = properties();
				setState(77);
				match(T__6);
				setState(78);
				end();

						Node node = new Node(((Se_stmtContext)_localctx).categorys.ret);
						node.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SEPut(true, node);
					
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(81);
				match(KW_PUT);
				setState(82);
				match(KW_LINK);
				setState(83);
				match(T__3);
				setState(84);
				((Se_stmtContext)_localctx).fnode = obj_id();
				setState(85);
				match(T__7);
				setState(86);
				((Se_stmtContext)_localctx).tnode = obj_id();
				setState(87);
				match(T__7);
				setState(88);
				((Se_stmtContext)_localctx).categorys = categorys();
				setState(89);
				match(T__4);
				setState(90);
				match(T__5);
				setState(91);
				((Se_stmtContext)_localctx).properties = properties();
				setState(92);
				match(T__6);
				setState(93);
				end();

						Link link = new Link(((Se_stmtContext)_localctx).categorys.ret);
						link.fnode = ((Se_stmtContext)_localctx).fnode.ret;
						link.tnode = ((Se_stmtContext)_localctx).tnode.ret;
						link.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SEPut(false, link);
					
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(96);
				match(KW_GET);
				setState(97);
				match(KW_NODE);
				setState(98);
				match(T__3);
				setState(99);
				((Se_stmtContext)_localctx).obj_ids = obj_ids();
				setState(100);
				match(T__4);
				setState(101);
				end();

						((Se_stmtContext)_localctx).ret =  new SEGet(true, ((Se_stmtContext)_localctx).obj_ids.ret);
					
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(104);
				match(KW_GET);
				setState(105);
				match(KW_LINK);
				setState(106);
				match(T__3);
				setState(107);
				((Se_stmtContext)_localctx).obj_ids = obj_ids();
				setState(108);
				match(T__4);
				setState(109);
				end();

						((Se_stmtContext)_localctx).ret =  new SEGet(false, ((Se_stmtContext)_localctx).obj_ids.ret);
					
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(112);
				match(KW_SET);
				setState(113);
				match(KW_NODE);
				setState(114);
				match(T__3);
				setState(115);
				((Se_stmtContext)_localctx).obj_id = obj_id();
				setState(116);
				match(T__4);
				setState(117);
				match(T__5);
				setState(118);
				((Se_stmtContext)_localctx).properties = properties();
				setState(119);
				match(T__6);
				setState(120);
				end();

						Node node = new Node(((Se_stmtContext)_localctx).obj_id.ret);
						node.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SESet(true, node);
					
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(123);
				match(KW_SET);
				setState(124);
				match(KW_NODE);
				setState(125);
				match(T__3);
				setState(126);
				((Se_stmtContext)_localctx).obj_id = obj_id();
				setState(127);
				match(T__7);
				setState(128);
				((Se_stmtContext)_localctx).categorys = categorys();
				setState(129);
				match(T__4);
				setState(130);
				match(T__5);
				setState(131);
				((Se_stmtContext)_localctx).properties = properties();
				setState(132);
				match(T__6);
				setState(133);
				end();

						Node node = new Node(((Se_stmtContext)_localctx).obj_id.ret, ((Se_stmtContext)_localctx).categorys.ret);
						node.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SESet(true, node);
					
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(136);
				match(KW_SET);
				setState(137);
				match(KW_LINK);
				setState(138);
				match(T__3);
				setState(139);
				((Se_stmtContext)_localctx).obj_id = obj_id();
				setState(140);
				match(T__4);
				setState(141);
				match(T__5);
				setState(142);
				((Se_stmtContext)_localctx).properties = properties();
				setState(143);
				match(T__6);
				setState(144);
				end();

						Link link = new Link(((Se_stmtContext)_localctx).obj_id.ret);
						link.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SESet(false, link);
					
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(147);
				match(KW_SET);
				setState(148);
				match(KW_LINK);
				setState(149);
				match(T__3);
				setState(150);
				((Se_stmtContext)_localctx).obj_id = obj_id();
				setState(151);
				match(T__7);
				setState(152);
				((Se_stmtContext)_localctx).categorys = categorys();
				setState(153);
				match(T__4);
				setState(154);
				match(T__5);
				setState(155);
				((Se_stmtContext)_localctx).properties = properties();
				setState(156);
				match(T__6);
				setState(157);
				end();

						Link link = new Link(((Se_stmtContext)_localctx).obj_id.ret, ((Se_stmtContext)_localctx).categorys.ret);
						link.propMap = ((Se_stmtContext)_localctx).properties.ret;
						((Se_stmtContext)_localctx).ret =  new SESet(false, link);
					
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(160);
				match(KW_REMOVE);
				setState(161);
				match(KW_NODE);
				setState(162);
				match(T__3);
				setState(163);
				((Se_stmtContext)_localctx).obj_ids = obj_ids();
				setState(164);
				match(T__4);
				setState(165);
				end();

						((Se_stmtContext)_localctx).ret =  new SERemove(true, ((Se_stmtContext)_localctx).obj_ids.ret);
					
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(168);
				match(KW_REMOVE);
				setState(169);
				match(KW_LINK);
				setState(170);
				match(T__3);
				setState(171);
				((Se_stmtContext)_localctx).obj_ids = obj_ids();
				setState(172);
				match(T__4);
				setState(173);
				end();

						((Se_stmtContext)_localctx).ret =  new SERemove(false, ((Se_stmtContext)_localctx).obj_ids.ret);
					
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(176);
				match(KW_SHOW);
				setState(177);
				match(KW_NODE);
				setState(178);
				match(KW_TOP);
				setState(179);
				((Se_stmtContext)_localctx).lt_numberic = lt_numberic();
				setState(180);
				end();

						((Se_stmtContext)_localctx).ret =  new SEShow(true, ((Se_stmtContext)_localctx).lt_numberic.ret.intValue());
					
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(183);
				match(KW_SHOW);
				setState(184);
				match(KW_LINK);
				setState(185);
				match(KW_TOP);
				setState(186);
				((Se_stmtContext)_localctx).lt_numberic = lt_numberic();
				setState(187);
				end();

						((Se_stmtContext)_localctx).ret =  new SEShow(false, ((Se_stmtContext)_localctx).lt_numberic.ret.intValue());
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CategorysContext extends ParserRuleContext {
		public String[] ret;
		public CategoryContext category;
		public CategorysContext categorys;
		public CategoryContext category() {
			return getRuleContext(CategoryContext.class,0);
		}
		public CategorysContext categorys() {
			return getRuleContext(CategorysContext.class,0);
		}
		public CategorysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_categorys; }
	}

	public final CategorysContext categorys() throws RecognitionException {
		CategorysContext _localctx = new CategorysContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_categorys);
		try {
			setState(201);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{

						((CategorysContext)_localctx).ret =  new String[0];
					
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				((CategorysContext)_localctx).category = category();

						((CategorysContext)_localctx).ret =  new String[] {((CategorysContext)_localctx).category.ret};
					
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(196);
				((CategorysContext)_localctx).category = category();
				setState(197);
				match(T__7);
				setState(198);
				((CategorysContext)_localctx).categorys = categorys();

						String[] cats = new String[1 + ((CategorysContext)_localctx).categorys.ret.length];
						cats[0] = ((CategorysContext)_localctx).category.ret;
						System.arraycopy(((CategorysContext)_localctx).categorys.ret, 0, cats, 1, ((CategorysContext)_localctx).categorys.ret.length);
						((CategorysContext)_localctx).ret =  cats;
					
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CategoryContext extends ParserRuleContext {
		public String ret;
		public Lt_stringContext lt_string;
		public Lt_stringContext lt_string() {
			return getRuleContext(Lt_stringContext.class,0);
		}
		public CategoryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_category; }
	}

	public final CategoryContext category() throws RecognitionException {
		CategoryContext _localctx = new CategoryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_category);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			((CategoryContext)_localctx).lt_string = lt_string();

					((CategoryContext)_localctx).ret =  ((CategoryContext)_localctx).lt_string.ret;
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertiesContext extends ParserRuleContext {
		public Map<String, PropValue> ret;
		public PropertyContext property;
		public PropertiesContext properties;
		public PropertyContext property() {
